# assignment-2

./: Makefile  README.md
node/: Cargo.toml
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: check.sh
submission/: Design_doc.md  Disign_doc.md
